test/parse-errors/description.rb
$cases = [
	["list-not-closed-1.cfg", "keyval: error: list `unclosed` not terminated near line 1"],
	["list-not-closed-2.cfg", "keyval: error: list `unclosed` not terminated near line 1"],
	["list-not-closed-3.cfg", "keyval: error: list `odd numbers` not terminated near line 18"],
	["no-value-1.cfg", "keyval: error: expected value after `x =` on line 1"],
	["no-value-2.cfg", "keyval: error: expected value after `this parser rocks =` on line 21"],
	["not-closed-1.cfg", "keyval: error: section `x` never closed"],
	["not-closed-2.cfg", "keyval: error: section `x` never closed"],
	["not-closed-3.cfg", "keyval: error: section `x` never closed"]
]
